--- a/nrkmeter.html
+++ b/nrkmeter.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="utf-8" />
     <title>NRKmeteret</title>
-    <script type="text/javascript" src="http://multimedia.bt.no/krinkelkroken/templates/charts/javascript/jquery-1.8.2.min.js"></script> 
+    <script type="text/javascript" src="https://multimedia.bt.no/krinkelkroken/templates/charts/javascript/jquery-1.8.2.min.js"></script> 
     <script type="text/javascript" src="data/data.js"></script>
     <script type="text/javascript" src="data/code.js"></script>
-	<script src="http://code.highcharts.com/highcharts.js"></script>
+	<script src="https://code.highcharts.com/highcharts.js"></script>
     <style type='text/css'>
  			#container {
    				 
