--- a/endring.html
+++ b/endring.html
@@ -16,9 +16,20 @@
             chart: {type:'column'},
             title: {text:'Formkurven'},
             subtitle: {text:'Siste uke målt mot snittet av ti foregående uker (%)'},
+            plotOptions: {
+                series: {
+                    color: '#5a6ca1',
+                    negativeColor: '#b02d46'
+                }},
             series: [snittall],
-            color: 'red',
-            negativeColor: 'red',
+            xAxis: {
+                categories: snittnavn,                 
+                labels: {
+                    style: {
+                        color: 'red',
+                        fontSize: "14px"
+                    }
+                }},  
             tooltip: number2
         })
     });
@@ -28,7 +39,7 @@
     <body style='margin:20px;padding:0px;'>
    
     <div id="container" style="height:800px;width:100%;margin:0px;padding:0px;"></div>
-    <button onclick="window.location.href='nrkmetersv.html'">Endre data</button>
+    <button onclick="window.location.href='nrkmeter.html'">Endre data</button>
     <p>Laget med <a href="https://www.r-project.org/">R</a>, <a href="https://www.javascript.com/">Javascript</a> og <a href="http://www.highcharts.com">Highcharts</a> av <a href="https://github.com/chrilur/nrkmeteret/">Christian Lura.</a></p>
 </body>
 </html>
