--- a/nrkmetersv.html
+++ b/nrkmetersv.html
@@ -15,8 +15,8 @@
      $(function() {
         $('#container2').highcharts({
             chart: {type:'spline'},
-            title: {text:'NRKmeteret'},
-            subtitle: {text:'Sidevisninger'},
+            title: {text:'NRKmeteret', style: tittel},
+            subtitle: {text:'Sidevisninger', style: undertittel},
             series: sider,
             colors: farger,
             xAxis: xakse,
