Fikset tittel med ukenr i formkurve

--- a/endring.html
+++ b/endring.html
@@ -14,7 +14,7 @@
     $(function() {
         $('#container').highcharts({
             chart: {type:'column'},
-            title: {text:'Formkurven', style: tittel},
+            title: {text: formkurve, style: tittel},
             subtitle: {
                 text:'Siste uke målt mot snittet av ti foregående uker (%)',
                 style: undertittel
