--- a/endring.html
+++ b/endring.html
@@ -16,7 +16,7 @@
             chart: {type:'column'},
             title: {text: formkurve, style: tittel},
             subtitle: {
-                text:'Siste uke målt mot snittet av ti foregående uker (%)',
+                text:'Unike brukere siste uke målt mot snittet av ti foregående uker (%)',
                 style: undertittel
             },
             plotOptions: {
