--- a/nrkmetersv.html
+++ b/nrkmetersv.html
@@ -30,7 +30,9 @@
     <body style='margin:20px;padding:0px;'>
    
     <div id="container2" style="height:800px;width:100%;margin:0px;padding:0px;"></div>
-    <button onclick="window.location.href='endring.html'">Endre data</button>
+    <button onclick="window.location.href='nrkmeter.html'">Unike brukere</button>
+    <button onclick="window.location.href='nrkmetersv.html'">Sidevisninger</button>
+    <button onclick="window.location.href='endring.html'">Formkurven</button>
     <p>Laget med <a href="https://www.r-project.org/">R</a>, <a href="https://www.javascript.com/">Javascript</a> og <a href="http://www.highcharts.com">Highcharts</a> av <a href="https://github.com/chrilur/nrkmeteret/">Christian Lura.</a></p>
 </body>
 </html>
